tests/baselines/reference/yieldExpressionInFlowLoop.errors.txt
yieldExpressionInFlowLoop.ts(4,18): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== yieldExpressionInFlowLoop.ts (1 errors) ====
    function* f() {
        let result;
        while (1) {
            result = yield result;
                     ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        }
    }
    